[project]
name = "comfyui-load-image-in-seq"
description = "This node is load PNG image sequentially with metadata."
version = "1.0.4"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-load-image-in-seq"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-load-image-in-seq"
Icon = ""
